--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,17 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/sanctum": "^2.4",
+        "laravel/socialite": "^4.4",
+        "laravel/tinker": "^2.0",
+        "livewire/livewire": "^1.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.3",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
+        "laravel-frontend-presets/tailwindcss": "^4.1",
+        "laravel/ui": "^2.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
