--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@tailwindcss/custom-forms": "^0.2.1",
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.13",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "tailwindcss": "^1.4",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "alpinejs": "^2.4.1"
     }
 }
